[workspace]
resolver = "2"
members = [
    "portal-gear",
]

[workspace.package]
version = "0.1.0"


[profile.dev]
opt-level = 2
debug = 2

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[workspace.dependencies]


once_cell = "1.21.4"
parking_lot = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.150"
imgui = { version = "^0.12.0" }
hudhook = { version = "^0.9.1", features = ["dx11", "inject"], default-features = false }


[workspace.dependencies.windows]
version = "0.62.2"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Input_XboxController", 
]

# TODO: remove this once the fix to imgui-rs/imgui-rs#775 gets released.
[patch.'crates-io']
imgui = { git = "https://github.com/imgui-rs/imgui-rs", rev = "cb8beeb" }